--- a/ChangeLog
+++ b/ChangeLog
@@ -17,10 +17,12 @@ Todas as mudanças notáveis neste projeto serão documentadas neste arquivo.
       direito do mouse, no modo tela cheia.
     - Adicionado uma Lista de execução.
     - Suporte ao arquivo m3u.
+ - Elaboração de um docstrig em utils e widgets.
 ###
 
 ### Changed / Modificado
  - Janela About(Sobre) fecha com um clique.
+ - Melhoria no código para a definição dos botões.
 ###
 
 ### Fixed / Corrigido
