--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,30 @@ All notable changes to this project will be documented in this file.
 Todas as mudanças notáveis neste projeto serão documentadas neste arquivo.
 
 
+## [ 1.3 ] - 2021-11-30 #############################################
+
+### Added / Adicionado
+ -
+###
+
+### Changed / Modificado
+ - Alterado o efeito visual nos controles e na playlist.
+###
+
+### Removed / Removido
+ - Efeito visual:
+    - Linha horizontal acima dos controles, que não tava muito
+      legal no programa.
+###
+
+### Fixed / Corrigido
+ - Foi adicionado um try/except preventivo para os efeitos dos
+   botões.
+###
+
+#####################################################################
+
+
 ## [ 1.2 ] - 2021-11-28 #############################################
 
 ### Added / Adicionado
