--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,61 @@ All notable changes to this project will be documented in this file.
 Todas as mudanças notáveis neste projeto serão documentadas neste arquivo.
 
 
+## [ Released ] - 2021-12-31 #############################################
+
+### Added / Adicionado
+ - Electron:
+	- 
+ - Games:
+	- 
+ - Java:
+	- 
+ - Python:
+	- 
+ - Softwares:
+	- 
+ - Others:
+	- 
+ - Specific:
+	- 
+ - Extra:
+	- 
+###
+
+### Upgraded / Atualizado
+ - Electron:
+	- 
+ - Games:
+	- 
+ - Java:
+	- 
+ - Python:
+	- 
+ - Softwares:
+	- 
+ - Others:
+	- 
+ - Specific:
+	- 
+ - Extra:
+	- 
+###
+
+### Changed / Modificado
+ - Replaced QVideoWidget by QGraphicsView,
+###
+
+### Removed / Removido
+ -
+###
+
+### Fixed / Corrigido
+ -
+###
+
+##########################################################################
+
+
 ## [ 1.3 ] - 2021-12-05 #############################################
 
 ### Added / Adicionado
