--- a/ChangeLog
+++ b/ChangeLog
@@ -6,7 +6,7 @@ Todas as mudanças notáveis neste projeto serão documentadas neste arquivo.
 ## [ Released ] - 2021-12-31 #############################################
 
 ### Added / Adicionado
- -
+ - Added time duration.
 ###
 
 ### Upgraded / Atualizado
