--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@ All notable changes to this project will be documented in this file.
 Todas as mudanças notáveis neste projeto serão documentadas neste arquivo.
 
 
-## [ Released ] - 2021-12-31 #############################################
+## [ 1.4 ] - 2022-01-02 #############################################
 
 ### Added / Adicionado
  - Added time duration.
@@ -14,7 +14,8 @@ Todas as mudanças notáveis neste projeto serão documentadas neste arquivo.
 ###
 
 ### Changed / Modificado
- - Replaced QVideoWidget by QGraphicsView,
+ - Replaced QVideoWidget by QGraphicsView, QGraphicsVideoItem
+   and QGraphicsScene.
 ###
 
 ### Removed / Removido
@@ -25,7 +26,7 @@ Todas as mudanças notáveis neste projeto serão documentadas neste arquivo.
  -
 ###
 
-##########################################################################
+#####################################################################
 
 
 ## [ 1.3 ] - 2021-12-05 #############################################
